--- a/04-react-todos-lab/src/TodoItem.css
+++ b/04-react-todos-lab/src/TodoItem.css
@@ -10,6 +10,14 @@
   );
 }
 
+.TodoItem:hover {
+  background-image: linear-gradient(
+    to bottom right,
+    rgba(140, 140, 140, 0.4),
+    rgba(111, 111, 111, 0.1)
+  );
+}
+
 .TodoItem-left {
   display: flex;
   justify-content: space-between;
@@ -22,3 +30,11 @@
   justify-content: space-between;
   column-gap: 15px;
 }
+
+.TodoItem-right {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 15px;
+  width: 300px;
+}
+
